<resources>
    <string name="app_name">QRDatabase</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string-array name="menu_titles">
        <item>Scan</item>
        <item>Search</item>
        <item>Recent</item>
        <item>Watchlist</item>
        <item>Database</item>
        <item>Statistics</item>
    </string-array>

    <!--Navigation drawer titles-->
    <string name="scan">Scan</string>
    <string name="search">Search</string>
    <string name="recent">Recent</string>
    <string name="watchlist">Watchlist</string>
    <string name="data">Data</string>
    <string name="stats">Statistics</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string-array name="menu_titles_divided">
        <item>Settings</item>
    </string-array>

    <!--Navigation drawer menu -->
    <string name="action_refresh">Odśwież</string>
    <string name="action_json">JSON</string>

    <!--BUTTON-->
    <string name="scan_button">SCAN</string>
    <string name="edit_button">EDIT</string>
    <string name="save_button">SAVE</string>

    <!--Text editors -->
    <string name="search_insert_brand">Wpisz nazwę produktu</string>
    <string name="search_insert_id">Wpisz kod kreskowy</string>
    <string name="insert_price">Wprowadź cenę</string>
    <string name="product_scanner">Skanner produktów</string>
    <string name="search_title">Wyszukaj produkt za pomocą nazwy lub kodu</string>


    <string name="currency">USD</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
