<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group_top">
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_qr_code"
            android:title="@string/scan" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_history"
            android:title="@string/recent" />
        <item
            android:id="@+id/nav_watchlist"
            android:icon="@drawable/ic_eye"
            android:title="@string/watchlist" />
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_storage"
            android:title="@string/data" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_chart"
            android:title="@string/stats" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group_bottom">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>

</menu>